update giscus, Applause

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -124,14 +124,14 @@ script_includes:
   <div class="content">
     {{ content }}
   </div>
-
   <div class="post-tail-wrapper text-muted">
-    <div style="text-align: center; margin-top: 2rem; margin-bottom: 2rem;">
+    <div style="display: flex; justify-content: center; margin-top: 2rem; margin-bottom: 2rem;">
       <link rel="stylesheet" href="https://unpkg.com/applause-button/dist/applause-button.css" />
       <script src="https://unpkg.com/applause-button/dist/applause-button.js"></script>
       
       <applause-button style="width: 58px; height: 58px;" color="#14b8a6" multiclap="true"></applause-button>
     </div>
+    <br/><br/><br/><br/>
     <!-- categories -->
     {% if page.categories.size > 0 %}
       <div class="post-meta mb-3">
